--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "scheduled checking for a file exists or not in the directory",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "node-cron": "^3.0.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
